# pdf_summary

./: .dockerignore  .env  Dockerfile  pyproject.toml  requirements.txt
back/: main.py
front/: main.py
