[tool.poetry]
name = "summary"
version = "0.1.0"
description = ""
authors = ["LaiLeeHan <allen@profetai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.22.0"
fastapi = {extras = ["all"], version = "^0.95.2"}
langchain = "^0.0.173"
pypdf = "^3.8.1"
openai = "^0.27.6"
chromadb = "^0.3.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
